fixed spacing on resume - coding section

--- a/public/scss/_resumeModal-text.scss
+++ b/public/scss/_resumeModal-text.scss
@@ -22,6 +22,7 @@
 	}
 	.resume-coding-body
 	{
+		padding: 20px;
 		font-size: $bodyFontSize;
 	}
 
