--- a/public/scss/style.css
+++ b/public/scss/style.css
@@ -384,6 +384,7 @@
   .resume-coding .resume-coding-header {
     font-size: 20px; }
   .resume-coding .resume-coding-body {
+    padding: 20px;
     font-size: 16px; }
 
 .resume-tools {
